--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "iview": "^1.0.1",
     "iview-area": "^1.6.0",
     "js-cookie": "^2.2.0",
+    "markdown-it": "^13.0.1",
     "marked": "^0.6.3",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "npm": "^6.10.1",
